--- a/main/resources/templates/account/function_test.html
+++ b/main/resources/templates/account/function_test.html
@@ -10,15 +10,15 @@
 
 <body>
   <script>
-    const test = () => {
-      alert("테스트 호출!!!");
+    const user = {
+      username: "test",
+      password: "1234",
+      name: "김준일"
     }
 
-    const abc = test;
-
-    test();
-
-    abc();
+    Object.keys(user).forEach(key => {
+      console.user();
+    }
 
   </script>
 </body>
